--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -12,30 +12,30 @@
 
 .container-middle {
   height: 800px;
-  //  background-color: #eee;
+  background-color: #eee;
 }
 .container-outer {
-  //border: solid 3px #ffc300;
+  border: solid 3px #ffc300;
   padding: 10px;
 }
 .container-header {
-  //border: solid 3px #900c3f;
+  border: solid 3px #900c3f;
   padding: 10px;
 }
 .container-left {
-  //border: solid 3px #ff5733;
+  border: solid 3px #ff5733;
   padding: 10px;
 }
 .container-right {
-  //border: solid 3px #c70039;
+  border: solid 3px #c70039;
   padding: 10px;
 }
 .container-right {
-  //border: solid 3px blue;
+  border: solid 3px blue;
   padding: 10px;
 }
 .content-container {
   min-height: 900px;
-  //border: solid 3px orchid;
+  border: solid 3px orchid;
   padding: 10px;
 }
