--- a/src/app/dsp-live-stats/component/dsp-live-stats.component.html
+++ b/src/app/dsp-live-stats/component/dsp-live-stats.component.html
@@ -1,7 +1,6 @@
-<mat-card>
+<mat-card style="height: 30vh">
     <mat-card-header>
       <mat-card-title style="margin-left:-18px;">Live Stats</mat-card-title>
-      <span class="fill-remaining-space"></span>
     </mat-card-header>
     <mat-card-content>
         <div fxLayout="row">
