--- a/src/app/dsp-live-stats/component/dsp-live-stats.component.scss
+++ b/src/app/dsp-live-stats/component/dsp-live-stats.component.scss
@@ -1,3 +1,16 @@
-.fill-remaining-space {
-  flex: 1 1 auto;
+.mat-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-card-header {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+}
+
+.mat-card-content {
+  flex-grow: 1;
+  overflow: auto;
+  outline: 1px solid red;
 }
