--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -7,23 +7,28 @@
 
 // use the borders for layout visualisation
 .container-outer {
-  //  border: solid 3px #ffc300;
+  // border: solid 3px #ffc300;
   padding: 10px;
 }
 .container-header {
-  //  border: solid 3px #900c3f;
+  // border: solid 3px #900c3f;
   padding: 10px;
 }
-.container-left {
-  //  border: solid 3px #ff5733;
-  padding: 10px;
-}
-.container-right {
-  //  border: solid 3px blue;
-  padding: 10px;
-}
-.content-container {
+.container-content {
   // min-height: 900px;
-  //  border: solid 3px orchid;
+  // border: solid 3px orchid;
+  padding: 10px;
+}
+.container-stats {
+  // border: solid 3px #ff5733;
+  padding: 10px;
+}
+.container-totes {
+  // border: solid 3px blue;
+  padding: 10px;
+}
+.container-message {
+  // min-height: 900px;
+  // border: solid 3px green;
   padding: 10px;
 }
