Removed unnecessary css

--- a/src/app/tote-summary/component/tote-summary.component.html
+++ b/src/app/tote-summary/component/tote-summary.component.html
@@ -20,7 +20,7 @@
                 <mat-cell class="type-cell"
                         *matCellDef="let tote">{{tote.toteType}}</mat-cell>
             </ng-container>
-            <ng-container matColumnDef="orderId">
+            <ng-container matColumnDef="orderId" class="mat-column-order-id">
                 <mat-header-cell *matHeaderCellDef>Order Id</mat-header-cell>
                 <mat-cell class="order-cell"
                         *matCellDef="let tote">{{tote.orderId}}</mat-cell>
