--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,24 +10,24 @@
       </mat-toolbar>
   </div>  
   <div class="container-content" fxLayout="row wrap" fxFlex="100">
-    <div fxFlex="20" fxFlex.lt-lg="100" fxFlex.lt-xl="30" fxLayout="row wrap" fxLayout.lt-lg="row" class="container-stats" fxLayoutGap="20px">
-        <div fxFlex="100" fxFlex.lt-lg="50">
+    <div fxFlex="20" fxFlex.lt-lg="100" fxFlex.lt-xl="30" fxLayout="column" fxLayout.lt-lg="row" fxLayout.lt-sm="column" class="container-stats" fxLayoutGap="20px">
+        <div>
           <app-config></app-config>
         </div>
-        <div fxFlex="100" fxFlex.lt-lg="50">
+        <div>
           <app-dsp-live-stats></app-dsp-live-stats>
         </div>
     </div>
-    <div fxFlex fxFlex.lt-lg="100" fxLayout="row wrap" fxLayoutGap="20px" class="container-totes">
-      <div fxFlex="100">
+    <div fxFlex fxFlex.lt-lg="100" fxLayout="column" fxLayoutGap="20px" class="container-totes">
+      <div>
         <app-tote-summary></app-tote-summary>
       </div>
-      <div fxFlex="100">
+      <div>
         <app-tote-messages></app-tote-messages>
       </div>
     </div>
-    <div fxLayout="row wrap" fxFlex="20" fxFlex.lt-xl="100" class="container-message">
-        <app-view-message fxFill></app-view-message>
+    <div fxFlex="20" fxFlex.lt-xl="100" class="container-message">
+        <app-view-message></app-view-message>
     </div>
   </div>
 </div>
