--- a/src/app/tote-summary/component/tote-summary.component.scss
+++ b/src/app/tote-summary/component/tote-summary.component.scss
@@ -1,6 +1,7 @@
 .mat-row {
   &.selected {
-    background: #ff4081;
+    // background: #ff4081;
+    background: #3f51b5;
   }
 }
 .fill-remaining-space {
