--- a/src/app/config/component/config.component.html
+++ b/src/app/config/component/config.component.html
@@ -15,11 +15,11 @@
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" fxFlex="60%">Include FMD</mat-label>
-        <mat-slide-toggle color="primary" [disabled] = "(config$ | async).releasing || (config$ | async).processingStarted" class="config-slide-toggle" labelPosition="before" (change)="onChangeFMD($event)" [checked] = "(config$ | async).includeFMD"></mat-slide-toggle>
+        <mat-slide-toggle color="primary" matTooltip="Can only be changed if no totes have been processed" [disabled] = "(config$ | async).releasing || (config$ | async).processingStarted" class="config-slide-toggle" labelPosition="before" (change)="onChangeFMD($event)" [checked] = "(config$ | async).includeFMD"></mat-slide-toggle>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" fxFlex="60%"> Send 32R Short</mat-label>
-        <mat-slide-toggle color="primary" class="config-slide-toggle" [disabled] = "(config$ | async).releasing || (config$ | async).processingStarted" labelPosition="before" (change)="onChange32RShort($event)" [checked] = "(config$ | async).sendThirtyTwoRShort"></mat-slide-toggle>
+        <mat-slide-toggle color="primary" matTooltip="Can only be changed if no totes have been processed" class="config-slide-toggle" [disabled] = "(config$ | async).releasing || (config$ | async).processingStarted" labelPosition="before" (change)="onChange32RShort($event)" [checked] = "(config$ | async).sendThirtyTwoRShort"></mat-slide-toggle>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slider" fxFlex="60%">Tote Release Interval</mat-label>
